# adapters-efficiency-lane

./: .gitignore  GP.ipynb  README.md  datasets.py  download_datasets.py  download_pretrained_models.py  environment.yml  gp.py  pyproject.toml
adapters/: example.py
adapters/adapter_citation_intent/: adapter_config.json  head_config.json
comparative_outputs/: 213255_citation_intent_results.csv  42_citation_intent_results.csv  632714_citation_intent_results.csv  8937216_citation_intent_results.csv  9091_citation_intent_results.csv  citation_intent_213255_houlsby.jpynb  citation_intent_213255_pfeiffer.jpynb  citation_intent_42_houlsby.ipynb  citation_intent_42_pfeiffer.jpynb  citation_intent_632714_houlsby.ipynb  citation_intent_8937216_houlsby.jpynb  citation_intent_8937216_pfeiffer.jpynb  citation_intent_9091_houlsby.ipynb  citation_intent_9091_pfeiffer.jpynb  dont-stop-pretraining-model-outputs.json  dont-stop-pretraining-model-outputs_v02.json  sciie_213255_houlsby.jpynb  sciie_213255_pfeiffer.jpynb  sciie_42_pfeiffer.jpynb  sciie_632714_houlsby  sciie_632714_pfeiffer.ipynb  sciie_8937216_houlsby  sciie_8937216_pfeiffer.jpynb
comparative_outputs/notebooks/: citation_intent_632714_pfeiffer.ipynb  sciie_42_houlsby.ipynb  sciie_9091_houlsby.ipynb  sciie_9091_pfeiffer.ipynb
cs_7643_efficiencylane/: README.md  run_parallel.sh
cs_7643_efficiencylane/adapters/: existing_adapter.py  new_adapter.py  roberta_base.py  roberta_base_tapt.py
environment/: config.env
paper_draft/: first_draft.tex
project_report/: ieee_fullname.bst  main.bbl  main.blg  main.tex  references.bib
resources/: df_final_results.csv
will-tuning-playground/: .gitignore  environment.yml
(+2131 files in other folders)
