[tool.poetry]
name = "cs-7643-efficiencylane"
version = "0.1.0"
description = ""
authors = ["datagero <datagero@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
adapters = "^0.1.2"
torch = "^2.2.2"
datasets = "^2.18.0"
accelerate = "^0.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
